--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="twitter:image" content="" />  
   <link rel="stylesheet" href="">
   <link rel="stylesheet" href="/src/sass/app.css" />
-  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:300,300i,400,400i,500,500i,600,600i|Neuton:200,300,400,700" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://use.fontawesome.com/ac16a4e359.js"></script>
+  <!-- <script src="https://use.fontawesome.com/ac16a4e359.js"></script> -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <script src='https://cdn.polyfill.io/v2/polyfill.min.js'></script>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -19,11 +19,8 @@
 <body>
 <div id="app">
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit-icons.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
-<!-- <script src="https://vuejs.org/js/vue.min.js"></script>  -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script> -->
 <script src="/dist/build.js"></script>
 <script src="http://ingenuity.hypenotic.com/dist/build.js"></script>
 </body></html>
