--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 <!-- <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script> -->
 <script src="/dist/build.js"></script>
-<script src="http://ingenuity.hypenotic.com/dist/build.js"></script>
+<!-- <script src="http://ingenuity.hypenotic.com/dist/build.js"></script> -->
 </body></html>
