--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ingenuity</title>
-  <meta name="description" content="">   
+  <title>Ingenuity</title>  
   <meta property="og:image" content="" />
   <meta name="twitter:image" content="" />  
   <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="/src/sass/app.css" />
+  <!-- <link rel="stylesheet" href="/src/sass/app.css" /> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- <script src="https://use.fontawesome.com/ac16a4e359.js"></script> -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
