--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ingenuity</title>  
-  <meta property="og:image" content="" />
-  <meta name="twitter:image" content="" />  
+  <meta property="og:image" content="http://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" />
+  <meta name="twitter:image" content="http://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" /> 
   <link rel="stylesheet" href="">
-  <!-- <link rel="stylesheet" href="/src/sass/app.css" /> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- <script src="https://use.fontawesome.com/ac16a4e359.js"></script> -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <script src='https://cdn.polyfill.io/v2/polyfill.min.js'></script>
@@ -29,8 +27,6 @@
 <div id="app">
 </div>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpGPGQX8oq7dF3OTm4OV-UiAKX_nr4_2w"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script> -->
 <script src="dist/build.js"></script>
 <script src="src/assets/js/wow.min.js"></script>
 <script>
@@ -40,5 +36,4 @@
     }).init();
   });
 </script>
-<!-- <script src="http://ingenuity.hypenotic.com/dist/build.js"></script> -->
 </body></html>
