--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div id="app">
 </div>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpGPGQX8oq7dF3OTm4OV-UiAKX_nr4_2w"></script>
-<script src="dist/build.js"></script>
-<script src="src/assets/js/wow.min.js"></script>
+<script src="/dist/build.js"></script>
+<script src="/src/assets/js/wow.min.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function(event) { 
     new WOW({
