Updates team and styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ingenuity</title>  
   <meta property="og:image" content="http://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" />
   <meta name="twitter:image" content="http://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" /> 
+  <meta name="description" content="A Design Build &amp; General Contracting business that marries experience, bleeding-edge standards, and passion for the craft with today's service experience expectations.">
   <link rel="stylesheet" href="">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
