--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ingenuity | Design Build & General Contracting</title>  
-  <meta property="og:image" content="http://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" />
-  <meta name="twitter:image" content="http://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" /> 
+  <meta property="og:image" content="https://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" />
+  <meta name="twitter:image" content="https://data.ingenuity.ca/custom/uploads/2018/03/ingenuity_card.jpg" /> 
   <meta name="description" content="A Design Build &amp; General Contracting business that marries experience, bleeding-edge standards, and passion for the craft with today's service experience expectations.">
   <link rel="stylesheet" href="">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
