Fixes team styles and type

--- a/index.html
+++ b/index.html
@@ -37,4 +37,5 @@
     }).init();
   });
 </script>
+<script src="//cdn.trackduck.com/toolbar/prod/td.js" async data-trackduck-id="59930bc28fc753830a14d52d"></script>
 </body></html>
