--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="app">
 </div>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpGPGQX8oq7dF3OTm4OV-UiAKX_nr4_2w"></script>
-<script src="/dist/build.js?v=190115-94v93nci2ni"></script>
+<script src="/dist/build.js?v=190116"></script>
 <script src="/src/assets/js/wow.min.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function(event) { 
